# faq_bot

./: CMakeLists.txt  FaqBot.cpp  FaqBot.h  README.md  main.cpp
tests/: menu.json
